k8s/prowlarr/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.home.lab`)
      middlewares:
        - name: forwardauth-authelia
      services:
        - kind: Service
          name: prowlarr
          port: http
